--- a/catalog/view/theme/default/template/account/account.twig
+++ b/catalog/view/theme/default/template/account/account.twig
@@ -120,7 +120,7 @@
             <a class="she-btn-white j-member-accout-signout" href="{{ logout }}">{{ text_logout }}</a>
           </div>
           <div class="con-foot-p">
-            <p style="margin-top: 10px;">It’s better to sign out after you finish your shopping so that you could make sure that your account safe.</p>
+            &nbsp;
           </div>
         </div>
       </div>
