--- a/catalog/view/theme/default/template/common/column_left_user.twig
+++ b/catalog/view/theme/default/template/common/column_left_user.twig
@@ -1,29 +1,29 @@
 <div class="she-my-wrap container">
     <ol class="position she-breadcrumb">
-        <li> <a href="index.php?route=common/home"> Home </a> </li>
-        <li> <span class="selected"> My ACCOUNT </span> </li>
+        {#<li> <a href="index.php?route=common/home"> Home </a> </li>#}
+        {#<li> <span class="selected"> My ACCOUNT </span> </li>#}
     </ol>
     <div class="row">
 <div class=" she-side col-sm-3">
     <nav class="she-side-nav">
-        <h3 class="she-title j-side-title"> <a class="j-my-accout" href="index.php?route=account/account" style="color: rgb(34, 34, 34);">账户 </a> </h3>
+        <h3 class="she-title j-side-title"> <a class="j-my-accout" href="{{ account }}" style="color: rgb(34, 34, 34);">{{ text_account }} </a> </h3>
         <ul>
-            <li> <a class="j-member-edit" href="index.php?route=account/edit">设置 </a> </li>
-            <li> <a class="j-member-orders" href="index.php?route=account/order">订单</a> </li>
-            <li> <a class="j-member-return" href="index.php?route=account/return">退单</a> </li>
-            <li> <a class="j-member-ticket " href="index.php?route=account/tickets"> 门票</a> </li>
+            <li> <a class="j-member-edit" href="{{ edit }}">{{ text_edit }} </a> </li>
+            <li> <a class="j-member-orders" href="{{ order }}">{{ text_my_orders }}</a> </li>
+            <li> <a class="j-member-return" href="{{ return }}">{{ text_return }}</a> </li>
+            <li> <a class="j-member-ticket " href="{{ tickets }}"> 门票</a> </li>
             {#<li> <a class=" j-member-payment" href=""> My Payment Options </a> </li>#}
-            <li> <a class=" j-member-wallet" href="index.php?route=account/transaction"> 钱包 </a> </li>
+            <li> <a class=" j-member-wallet" href="{{ transaction }}"> {{ text_transaction }} </a> </li>
             {#<li> <a class=" j-member-mymeasurement" href=""> My Measurements </a> </li>#}
             {#<li> <a class=" j-member-shein" href=""> SheIn Membership</a> </li>#}
-            <li> <a class=" j-member-address" href="index.php?route=account/address"> 地址 </a> </li>
-            <li> <a class=" j-member-password" href="index.php?route=account/password"> 修改密码 </a> </li>
+            <li> <a class=" j-member-address" href="{{ address }}"> {{ text_address_book }} </a> </li>
+            <li> <a class=" j-member-password" href="{{ password }}"> {{ text_password }} </a> </li>
             {#<li> <a class=" j-member-styleGallery" href=""> Style Gallery </a> </li>#}
             {#<li> <a class=" j-member-report" href=""> Free Trial Report </a> </li>#}
-            <li> <a class=" j-member-wishlist" href="index.php?route=account/wishlist"> 收藏 </a> </li>
-            <li> <a class=" j-member-reward" href="index.php?route=account/reward"> 积分 </a> </li>
+            <li> <a class=" j-member-wishlist" href="{{ wishlist }}"> {{ heading_title }} </a> </li>
+            <li> <a class=" j-member-reward" href="{{ reward }}"> {{ text_reward }} </a> </li>
             {#<li> <a class=" j-member-newsletter" href="index.php?route=account/newsletter"> 订阅 </a> </li>#}
-            <li class="log_off_left"> <a class="j-member-signout" href="index.php?route=account/logout"> 注销 </a> </li>
+            <li class="log_off_left"> <a class="j-member-signout" href="{{ logout }}"> {{ text_logout }} </a> </li>
         </ul>
     </nav>
 </div>
